fixed missing space bottom

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
 
 .wrapper {
   min-height: 100vh;
+  padding-bottom: 100px;
   background-color: #080E57;
   margin: 0;
   -webkit-touch-callout: none; /* iOS Safari */
